# lab-01

./: .travis.yml  CMakeLists.txt
include/: cast.h  header.hpp
sources/: cast.cpp  source.cpp
tests/: test.cpp
